--- a/public/style.css
+++ b/public/style.css
@@ -214,3 +214,24 @@ body {
 .delete .yesno a:hover {
     background-color: #32a367;
 }
+.parent-div {
+    display: inline-block;
+    position: relative;
+    overflow: hidden;
+}
+.parent-div input[type=file] {
+    left: 0;
+    top: 0;
+    opacity: 0;
+    position: absolute;
+    font-size: 90px;
+}
+.btn-upload {
+    background-color: #fff;
+    border: 3px solid #000;
+    color: #000;
+    padding: 10px 25px;
+    border-radius: 10px;
+    font-size: 22px;
+    font-weight: bold;
+}
